# dispatch

./: Makefile.am  README  configure.ac
include/: Makefile.am  dispatch.h
lib/: Makefile.am  dispatch.c
man/: Makefile.am  dispatch.1  dispatch.3
po/: Makevars  POTFILES.in  dispatch.pot
src/: Makefile.am  cerr_printf.cc  command_input_filter.hh  dispatch.c  dispatch.h  main.cc  options.c  options.cc  read_to_list.cc
